Bug 425678 - Dolphin does not detect samba share depending on the way I launch it
Summary: Dolphin does not detect samba share depending on the way I launch it
Status: RESOLVED FIXED
Alias: None
Product: kdenetwork-filesharing
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Harald Sitter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-22 14:05 UTC by Patrick Silva
Modified: 2020-08-24 15:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12
Sentry Crash Report:


Attachments
screen recording (2.42 MB, video/webm)
2020-08-22 14:05 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-08-22 14:05:18 UTC
Created attachment 131099 [details]
screen recording

SUMMARY
Watch the attached screen recording please.
I have a link to my Home and "Dolphin" icon on my desktop.
When I use "Dolphin" icon to launch it, my samba share is properly detected,
but it is not when I use the link to my Home.
The samba share shown in my screen recording was created after I launch Dolphin
via "Dolphin" icon.

EXPECTED RESULT
Dolphin should always properly detect samba shares

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2
Comment 1 Nate Graham 2020-08-22 19:21:25 UTC
I can reproduce.
Comment 2 Harald Sitter 2020-08-24 09:19:14 UTC
ðŸĪŠ that makes the path /home/$user/Desktop/$user/Public
Comment 3 Bug Janitor Service 2020-08-24 09:49:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kdenetwork-filesharing/-/merge_requests/8
Comment 4 Harald Sitter 2020-08-24 15:39:02 UTC
Git commit cf4538ca437bf6aff209dc03e09662e6e638e7e0 by Harald Sitter.
Committed on 24/08/2020 at 15:38.
Pushed by sitter into branch 'master'.

resolve paths to their canonical representation

this resolves all symlinks along the way to reach the most canonical
representation of the path.

without this a symlink of your home you place on the desktop is a
strictly different path than your home since it is nested inside
$HOME/Desktop/$USER
FIXED-IN: 20.12

M  +2    -1    samba/filepropertiesplugin/sambausershareplugin.cpp

https://invent.kde.org/network/kdenetwork-filesharing/commit/cf4538ca437bf6aff209dc03e09662e6e638e7e0