resolve paths to their canonical representation

this resolves all symlinks along the way to reach the most canonical
representation of the path.

without this a symlink of your home you place on the desktop is a
strictly different path than your home since it is nested inside
$HOME/Desktop/$USER

BUG: 425678
FIXED-IN: 20.12